Fixed link to JS script.

--- a/src/main/webapp/s3routes.html
+++ b/src/main/webapp/s3routes.html
@@ -38,7 +38,7 @@
         .row{margin-bottom: 20px}
         .share-this-page-base-widget{float:right;margin-top:20px}.share-button-placeholder{display:inline-block;width:90px}
     </style>
-    <script type="text/javascript" language="javascript" src="s3routes.nocache.js"></script>
+    <script type="text/javascript" language="javascript" src="s3routes/s3routes.nocache.js"></script>
 </head>
 <body class="no-padding">
 <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' class="history-frame"></iframe>
