Minor modifications to change text and markup of converting page.

--- a/src/main/webapp/s3routes.html
+++ b/src/main/webapp/s3routes.html
@@ -36,6 +36,8 @@
         .no-js{width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif}
         .history-frame{position:absolute;width:0;height:0;border:0}
         .row{margin-bottom: 20px}
+        .row a.coloured-link{padding:0;color:#5380ce;vertical-align:top}
+        textarea[readonly].read-only-result{cursor:auto}
         .share-this-page-base-widget{float:right;margin-top:20px}.share-button-placeholder{display:inline-block;width:90px}
     </style>
     <script type="text/javascript" language="javascript" src="s3routes/s3routes.nocache.js"></script>
